# ScarabOS

./: .gitignore  Cargo.toml  Makefile  README.md  boot  build.txt  install.sh  run  x86_64-scarab_os.json  x86_64-thos.json
.cargo/: config.toml
boot/: boot.asm  grub.cfg  long_mode_init.asm  rust_handshake.asm
boot/isodir/boot/grub/: grub.cfg
src/: boot.rs  cli.rs  keyboard.rs  lib.rs  main.rs  scalloc.rs  vec.rs  vga_buffer.rs
