[package]
name = "scarab"
version = "0.1.0"
authors = ["Alexander Michael Feetham <123alexfeetham@gmail.com>"]

# Building a static library
[lib]
crate-type = ["staticlib"]

# a basic libc implementation
[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
